# libhackable

./: README.md  meson.build
data/: com.endlessm.Hackable.xml  meson.build
hackable/: hackable-errors.c  hackable-errors.h  hackable-version.h.in  meson.build
